--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ flask-sqlalchemy = "^3.0.5"
 flask-migrate = "^4.0.4"
 flask-testing = "^0.8.1"
 psycopg2-binary = "^2.9.7"
+mypy = "^1.5.1"
+flask-pydantic = "^0.11.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.1"
