--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ flask-testing = "^0.8.1"
 psycopg2-binary = "^2.9.7"
 mypy = "^1.5.1"
 flask-pydantic = "^0.11.0"
+alembic = "^1.12.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.1"
